[package]

name = "retag"
description = "`A commandline tool and shell plugin that watches for file changes in a directory and incrementally rebuilds your ctags file for the files which have changed."
license = " GPL-3.0"
version = "0.0.2"
authors = ["Michael Maurizi <michael.maurizi@gmail.com>"]
repository = "https://github.com/maurizi/retag.rs"
readme = "README.md"

[dependencies]
glob = "0.2"
tempdir = "0.3"
docopt = "0.6"
rustc-serialize = "0.3"
toml = "0.1"
notify = "2.4"
